--- a/docker-compose.local.yaml
+++ b/docker-compose.local.yaml
@@ -6,10 +6,15 @@ services:
     build:
       dockerfile: Dockerfile.local
     restart: unless-stopped
+    volumes:
+      - ./docker/api/php/config/docker-xdebug.ini:/usr/local/etc/php/conf.d/docker-xdebug.ini
     environment:
+      XDEBUG_CONFIG: "client_host=172.22.75.1"
+      XDEBUG_SESSION: 1
+      XDEBUG_MODE: debug
       PHP_IDE_CONFIG: "serverName=Docker"
-#    depends_on:
-#      - mysql
+    #    depends_on:
+    #      - mysql
     networks:
       courselab:
         ipv4_address: ${API_IPV4}
@@ -26,7 +31,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - WDS_SOCKET_PORT=0
-#
+
   nginx:
     build:
       dockerfile: Dockerfile.local
