--- a/api/config/packages/security.yaml
+++ b/api/config/packages/security.yaml
@@ -27,7 +27,7 @@ security:
     - { path: ^/api/docs, roles: PUBLIC_ACCESS }
     - { path: ^/api/registration, roles: PUBLIC_ACCESS }
     - { path: ^/api/login, roles: PUBLIC_ACCESS }
-    - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
+    - { path: ^/api,       roles: PUBLIC_ACCESS }
 when@test:
   security:
     password_hashers:
